--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, intial-scale-1.0" />
     <title>Around the U.S</title>
+    <link href="./favicon.ico" rel="icon" />
     <link href="./pages/index.css" rel="stylesheet" />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/logo.svg" alt="Around the U.S. Logo" />
+        <img
+          class="header__logo"
+          src="./images/logo.svg"
+          alt="Around the U.S. Logo"
+        />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -21,58 +26,65 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button type="button" class="profile__edit-button"></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button type="button" class="profile__add-button"></button>
         </section>
+
         <section class="cards page__section">
           <ul class="card__list">
             <li class="card">
               <img src="./images/yosemite-valley.png" class="card__image" />
               <div class="card__description">
-                <h2>Yosemite Valley</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Yosemite Valley</h2>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/lake-louise.png" class="card__image" />
               <div class="card__description">
-                <h2>Lake Louise</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Lake Louise</h2>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/bald-mountains.png" class="card__image" />
               <div class="card__description">
-                <h2>Bald Mountains</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Bald Mountains</h2>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/latemar.png" class="card__image" />
               <div class="card__description">
-                <h2>Latemar</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Latemar</h2>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/vanoise-national-park.png" class="card__image" />
+              <img
+                src="./images/vanoise-national-park.png"
+                class="card__image"
+              />
               <div class="card__description">
-                <h2>Vanoise Nationa...</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Vanoise National Park</h2>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/lago-di-braies.png" class="card__image" />
               <div class="card__description">
-                <h2>Lago di Braies</h2>
-                <button class="card__like-button"></button>
+                <h2 class="card__title">Lago di Braies</h2>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
           </ul>
         </section>
       </main>
     </div>
+    <footer class="footer">
+      <p class="footer__copywrite">&copy; 2022 Around the U.S.</p>
+    </footer>
   </body>
 </html>
