--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
 
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img src="./images/yosemite-valley.png" class="card__image" />
               <div class="card__description">
@@ -82,9 +82,9 @@
           </ul>
         </section>
       </main>
+      <footer class="footer">
+        <p class="footer__copywrite">&copy; 2022 Around the U.S.</p>
+      </footer>
     </div>
-    <footer class="footer">
-      <p class="footer__copywrite">&copy; 2022 Around the U.S.</p>
-    </footer>
   </body>
 </html>
