--- a/index.html
+++ b/index.html
@@ -35,28 +35,44 @@
         <section class="cards page__section">
           <ul class="cards__list">
             <li class="card">
-              <img src="./images/yosemite-valley.png" class="card__image" />
+              <img
+                src="./images/yosemite-valley.png"
+                class="card__image"
+                alt="yosemite-valley"
+              />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/lake-louise.png" class="card__image" />
+              <img
+                src="./images/lake-louise.png"
+                class="card__image"
+                alt="lake-louise"
+              />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/bald-mountains.png" class="card__image" />
+              <img
+                src="./images/bald-mountains.png"
+                class="card__image"
+                alt="bald-mountains"
+              />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/latemar.png" class="card__image" />
+              <img
+                src="./images/latemar.png"
+                class="card__image"
+                alt="latemar"
+              />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
                 <button type="button" class="card__like-button"></button>
@@ -66,6 +82,7 @@
               <img
                 src="./images/vanoise-national-park.png"
                 class="card__image"
+                alt="vanoise-national-park"
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
@@ -73,7 +90,11 @@
               </div>
             </li>
             <li class="card">
-              <img src="./images/lago-di-braies.png" class="card__image" />
+              <img
+                src="./images/lago-di-braies.png"
+                class="card__image"
+                alt="lago-di-braies"
+              />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braies</h2>
                 <button type="button" class="card__like-button"></button>
