--- a/index.html
+++ b/index.html
@@ -107,5 +107,7 @@
         <p class="footer__copywrite">&copy; 2022 Around the U.S.</p>
       </footer>
     </div>
+
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
