--- a/index.html
+++ b/index.html
@@ -108,6 +108,30 @@
       </footer>
     </div>
 
+    <div class="model">
+      <div class="model__container">
+        <button class="model__close"></button>
+        <p class="model__heading">Edit Profile</p>
+        <form class="model__form">
+          <input 
+            type="text" 
+            name="title"
+            id="model-title"
+            placeholder="Name"
+            class="model__input"
+            />
+          <input 
+            type="text" 
+            name="description"
+            id="model-description"
+            placeholder="Description"
+            class="model__input"
+            />
+          <button class="model__button">Save</button>
+        </form>
+      </div>
+    </div>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
