--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button type="button" class="profile__edit-button"></button>
+            <button type="button" class="profile__edit-button" id="profile-edit-button"></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button type="button" class="profile__add-button"></button>
@@ -108,9 +108,9 @@
       </footer>
     </div>
 
-    <div class="model">
+    <div class="model" id="profile-edit-model">
       <div class="model__container">
-        <button class="model__close"></button>
+        <button class="model__close" id="model-close-button"></button>
         <p class="model__heading">Edit Profile</p>
         <form class="model__form">
           <input 
